// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Android generation methods should add a sanitizer for the function with the correct name 1`] = `
{
  "args": [
    {
      "type": "Integer",
      "value": 4,
    },
    {
      "type": "Double",
      "value": 42,
    },
  ],
  "method": "scrollInDirection",
  "target": {
    "type": "Class",
    "value": "com.wix.detox.espresso.DetoxAction",
  },
}
`;

exports[`Android generation methods should generate type checks 1`] = `"times should be a number, but got FOO (string)"`;

exports[`Android generation methods should return adapter calls 1`] = `
{
  "args": [
    {
      "type": "Integer",
      "value": 3,
    },
  ],
  "method": "multiClick",
  "target": {
    "type": "Class",
    "value": "com.wix.detox.espresso.DetoxAction",
  },
}
`;
